@@ -17,6 +17,8 @@ following it. The string argument will be part of the filter pattern,
 which is a glob pattern built like this: "*Line* $line:*$string*"
 If the string is preceeded by "N", "W" or "E", anything from that
 severity level and down is ignored.
+If the string is preceeded by and offset like "+2", a line further
+down is marked for filtering. No given offset corresponds to "+1".
 
 Examples:
 ##nagelfar ignore 
